--------------------------------------------------------------------------------

2017-xx-xx  2.8.2 (not released)
--------------------------------------------------------------------------------
FIX  #41    System diagnosis string shows wrong hdd space.
FIX  #40    Sound effect start time not properly retrieved.
FIX  #42    NPE when leaving a field (e.g. sound period duration) empty.


2017-11-11  2.8.1
--------------------------------------------------------------------------------
IMP         Added more information to system diagnosis string.
IMP         Improved error tracking during compilation generation.
IMP  #31, #33 Reduced memory footprint of compilation.
IMP  #34    Added .deb package for Linux.
IMP  #36    Added command line switch ('-c') to clear user settings.
FIX  #37    Mitigated ConcurrentModificationException when generating music track cache.


2017-09-03  2.8.0
--------------------------------------------------------------------------------
ADD  #27    Introduced persistent user settings.
ADD  #26    Introduced new version check on application startup.
ADD         Introduced welcome dialog to be shown after upgrades.
IMP         Made sound effect start time spinner editable.
IMP         Improved directions in error dialog.
FIX         Fixed resizing issue in debug log.


2017-07-30  2.7.1
--------------------------------------------------------------------------------
FIX  #25    Sound effect preview prevents software from quitting properly.


2017-07-30  2.7.0
--------------------------------------------------------------------------------
ADD  #6     Add possibility to include sound effects.
FIX  #22    Preview scales badly.
FIX  #23    Temporary compilation file is not deleted on Windows.


2017-02-07  2.6.4
--------------------------------------------------------------------------------
ADD  #20    Check update dialog contains link to latest software version download.
IMP         Adapted version check URL to new server address.